--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,28 @@
     height: 80px;
     border: 1px dashed black;
 }
+
+.jumbo {
+    height: 500px;
+    background-color: lightgreen;
+}
+
+.h-100 {
+    height: 100%;
+}
+
+.jumbo-col {
+    height: 100%;
+    border: 1px dashed black;
+}
+
+.portfolio {
+    margin-top: 100px;
+}
+
+.portfolio .container .row * {
+    height: 200px;
+    border: 1px dashed black;
+    margin: 10px 0;
+    background-color: red;
+}
