--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 .header {
     height: 80px;
     border: 1px dashed black;
+    background-color: yellow;
+}
+
+.border {
+    border: 1px dashed black;
 }
 
 .jumbo {
