--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+.brdr {
+    border: 1px dashed black;
+}
+
+
 .header {
     height: 80px;
     border: 1px dashed black;
@@ -23,4 +28,10 @@
     border: 1px dashed black;
     margin: 10px 0;
     background-color: red;
+}
+
+.about {
+    margin-top: 50px;
+    height: 500px;
+    background-color: lightgreen;
 }
