--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
 .portfolio .container .row * {
     height: 200px;
     border: 1px dashed black;
-    margin: 10px 0;
+    /* margin: 10px 0; */
     background-color: red;
 }
 
@@ -37,7 +37,7 @@
 }
 
 .contact-me {
-    margin: 20px 0;
+    
     height: 500px;
 }
 
