--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,21 @@
     background-color: #2c3e50;
 }
 
+#jumbo {
+    height: 500px;
+    background-color: #28bc9f;
+}
+
+#jumbo .container .row img {
+    height: 200px;
+}
+
+#jumbo .row hr {
+    height: 5px;
+    border-radius: 10px;
+    opacity: 1;
+}
+
 #contact .form-control {
     border-radius: 0;
     border-width: 0 0 1px 0;
