--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body {
+    font-family: sans-serif;
+}
 
 .bg-blue {
     background-color: #2c3e50;
@@ -17,8 +20,20 @@
     opacity: 1;
 }
 
+#portfolio .row hr {
+    height: 5px;
+    border-radius: 10px;
+    opacity: 1;
+}
+
+#portfolio img {
+    height: 200px;
+    border-radius: 15px;
+}
+
+
 #jumbo .row .col p {
-    font-size: 13px;
+    font-size: 12px;
 }
 
 #contact .form-control {
